<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:foregroundGravity="center"
        android:src="@drawable/ic_menu_profile" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_titulo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="41dp"
        android:text="@string/nombre"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/text_titulo"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="148dp"
        android:hint="@string/input_nombre" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_apellido"
        android:layout_alignParentStart="true"
        android:layout_marginStart="41dp"
        android:text="@string/apellido"
        android:textColor="@color/colorPrimary"
        tools:ignore="UnknownId" />

    <EditText
        android:id="@+id/text_apellido"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/text_titulo"
        android:layout_marginTop="236dp"
        android:hint="@string/input_apellido" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="41dp"
        android:layout_alignTop="@+id/spiner_carrera"
        android:text="@string/carrera"
        android:textColor="@color/colorPrimary"
        tools:ignore="UnknownId" />

    <Spinner
        android:id="@+id/spiner_carrera"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/text_titulo"
        android:layout_marginBottom="221dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp"
        android:text="REGISTRAR"
        android:tooltipText="REGISTRAR" />

    <TextView
        android:id="@+id/text_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="139dp"
        android:layout_marginStart="41dp"
        android:text="@string/correo"
        android:textColor="@color/colorPrimary"
        tools:ignore="UnknownId" />

    <EditText
        android:id="@+id/input_correo"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_correo"
        android:layout_alignStart="@+id/text_titulo"
        android:hint="@string/input_correo" />

</RelativeLayout>