<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/contenedor_detalle_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/ciclo" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical|start"
        android:src="@drawable/ic_menu_file"
        app:layout_anchor="@+id/contenedor_detalle_item"
        app:layout_anchorGravity="top|end" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_titulo"
            android:layout_alignParentStart="true"
            android:layout_marginStart="41dp"
            android:text="@string/titulo"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/text_titulo"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="34dp"
            android:layout_marginTop="37dp"
            android:hint="@string/titulo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="21dp"
            android:layout_marginTop="122dp"
            android:text="@string/descripcion"
            android:textColor="@color/colorPrimary"
            tools:ignore="UnknownId" />

        <EditText
            android:id="@+id/text_descripcion"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/spiner_ciclo"
            android:layout_marginTop="114dp"
            android:hint="@string/descripcion" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="124dp"
            android:text="@string/ciclo"
            android:layout_marginLeft="41dp"
            android:layout_marginTop="200dp"
            android:textColor="@color/colorPrimary"
            tools:ignore="UnknownId" />

        <Spinner
            android:id="@+id/spiner_ciclo"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/text_titulo"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="124dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="49dp"
            android:layout_marginEnd="70dp"
            android:text="REGISTRAR"
            android:tooltipText="REGISTRAR" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="49dp"
            android:layout_marginStart="70dp"
            android:text="ARCHIVO"
            android:tooltipText="REGISTRAR" />


    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>